2005-03-23  Alan Modra  <amodra@bigpond.net.au>

	* elflink.c (elf_link_add_object_symbols): Set SEC_EXCLUDE on
	.gnu.warning.* sections.

2005-03-22  Alan Modra  <amodra@bigpond.net.au>

	* elf32-ppc.c (elf_linker_section_pointers_t): Remove
	written_address_p.
	(ppc_elf_create_linker_section): Don't try to reuse existing section.
	(elf_create_pointer_linker_section): Delete info parm.  Don't make
	h dynamic.  Don't set written_address_p.
	(ppc_elf_check_relocs): Adjust ppc_elf_create_linker_section calls.
	(bfd_put_ptr): Delete.
	(elf_finish_pointer_linker_section): Remove output_bfd and info parms.
	Always write section contents.  Assert global sym is def_regular.
	Use offset bottom bit as a written flag.
	(ppc_elf_relocate_section): Adjust elf_finish_pointer_linker_section
	calls.

2005-03-22  Alan Modra  <amodra@bigpond.net.au>

	* elf32-ppc.c (ppc_elf_set_sdata_syms): New function, extracted from..
	(ppc_elf_set_sdata_syms): ..here.  Expand comment.  Set .sbss start
	and end syms.

2005-03-21  Nick Clifton  <nickc@redhat.com>

	* coff-arm.c (coff_link_hash_entry): Only define for non WINCE
	targets.
	(t2a1_bx_pc_insn): Likewise.
	(t2a2_noop_insn): Likewise.
	(t2a3_b_insn): Likewise.
	(t2a1_push_insn): Likewise.
	(t2a2_ldr_insn): Likewise.
	(t2a3_mov_insn): Likewise.
	(t2a4_bx_insn): Likewise.
	(t2a5_pop_insn): Likewise.
	(t2a6_bx_insn): Likewise.
	(coff_arm_relocate_section): Only declare the high_address
	variable for non WINCE targets.

2005-03-22  Alan Modra  <amodra@bigpond.net.au>

	* elf32-ppc.c (ppc_elf_add_symbol_hook): Make htab->sbss
	SEC_LINKER_CREATED.  Attach to dynobj.
	(ppc_elf_size_dynamic_sections): Strip htab->sbss if zero size.

2005-03-21  Alan Modra  <amodra@bigpond.net.au>

	* elf32-ppc.c (struct elf_linker_section): Remove sym_hash and
	sym_offset.  Add name, bss_name, sym_name, sym_val.
	(struct ppc_elf_link_hash_table): Remove sdata and sdata2 pointers.
	Add sdata array of elf_linker_section_t.